@@ -5,6 +5,10 @@ v4.19.9 ??? ??? 2018
   - A PEP 376 .dist-info directory is created on installation that provides
     version information for dependent packages and allows pip to uninstall.
   - Added the --no-dist-info option to configure.py.
+  - Private copies of the sip module are now easier to configure and use.  SIP
+    v5 will only support private copies.
+  - Added the -n option to the sip code generator to support private copies of
+    the sip module.
   - Bug fixes.
 
 v4.19.8 26th February 2018
